--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,4 +1,3 @@
 <app-nav/>
 
-<h3 class="text-3xl text-red-500">{{title()}}!!</h3>
-<button class="btn btn-primary">Primary Button</button>
+<app-home/>
